Dependencies/MELibraries/32/BC/MEGSV.H

#define GSV_OK 0
#define GSV_ERROR -1
#define GSV_TRUE 1
#define GSV_MEMORY_OK GSV_OK
#define GSV_MEMORY_OK_FUNCTION 0x01
#define GSV_MEMORY_ERROR_ABORT 0xFF
#define GSV_MEMORY_ERROR_SEVERE 0x10
#define GSV_MEMORY_ERROR_NA 0x11
#define GSV_MEMORY_ERROR_DATA 0x12
#define GSV_MEMORY_ERROR_FAILED 0x1E
#define GSV_MEMORY_ERROR_DENIED 0x1F
#define GSV_LINEAR_EXECUTE 0
#define GSV_LINEAR_TEST_ALL 1
#define GSV_LINEAR_TEST_SLOPES 2
#define GSV_LINEAR_TEST_POINTS 3
#define GSV_LINEAR_SORT 0x4000
#define GSV_LINEAR_INFO 0
#define GSV_LINEAR_INITIALIZE -4
#define GSV_LINEAR_OFFSETZERO -2
#define GSV_LINEAR_COUNTER 1
#define GSV_LINEAR_ERROR_CODE 0x3C00
#define GSV_LINEAR_ERROR_POINT 0x00FF
#define GSV_LINEAR_ERROR_ACT 0x0100
#define GSV_LINEAR_ERROR_REF 0x0200
#define GSV_LINEAR_ERROR_OK GSV_OK
#define GSV_LINEAR_ERROR_NOIFC 0x0400
#define GSV_LINEAR_ERROR_UNKNOWNIFC 0x0800
#define GSV_LINEAR_ERROR_NPOINTS 0x0C00
#define GSV_LINEAR_ERROR_RANGE 0x1000
#define GSV_LINEAR_ERROR_ORDER 0x1400
#define GSV_LINEAR_ERROR_SLOPE 0x1800
#define GSV_LINEAR_ERROR_LOCKED 0x1C00
#define GSV_LINEAR_ERROR_INCOMPLETE 0x2000
#define GSV_LINEAR_ERROR_PARAMETER 0x2400
#define GSV_LINEAR_ERROR_GAIN 0x2800
#define GSV_LINEAR_ERROR_SENSITIVITY 0x2C00
#define GSV_LINEAR_ERROR_NOTIMPLEMENTED 0x3000
#define GSV_ACTEX_FLAG_BAUDRATE 0x00000001L
#define GSV_ACTEX_FLAG_WAKEUP 0x00000002L
#define GSV_ACTEX_FLAG_HANDSHAKE 0x00000004L
#define GSV_STATUS_MASK_SWITCH ((unsigned char)0x10U)
#define GSV_STATUS_MASK_SWITCH2 ((unsigned char)0x08U)
#define GSV_CANSET_MANUFACTURER_ID 0x00
#define GSV_CANSET_COMMAND_ID 0x01
#define GSV_CANSET_MESSAGE_ID 0x02
#define GSV_CANSET_BAUD 0x7E
#define GSV_CANSET_FLAGS 0x7F
#define GSV_CANSET_20B 0x80
#define ME_INTSTAT_FLUSH 0x00000001L
typedef int (CALLBACK *MEreservedExecProc)(int, void *);
typedef struct GSV_ACTIVATE_EXTENDED_
{
	long actex_size;
	long actex_buffersize;
	long actex_flags;
	long actex_baudrate;
} GSV_ACTIVATE_EXTENDED;
long WINAPI GSVversion(void);
int WINAPI GSVmodel(int no);
int WINAPI MEreservedExec(int no, int code, MEreservedExecProc rexpro, void *arg);
void *WINAPI MErequestEvent(int no);
long WINAPI GSVrevision(void);
long WINAPI GSVgetLocalBaudRate(int no);
int WINAPI GSVactivateExtended(int no, GSV_ACTIVATE_EXTENDED *actex);
int WINAPI GSVactivate(int no, long buffersize);
void WINAPI GSVrelease(int no);
int WINAPI GSVinitialize(int no);
int WINAPI GSVflushBuffer(int no);
long WINAPI MEinternalStatus(int no);
int WINAPI GSVgetValues(int *no, int n);
int WINAPI MEsendBytesToDevices(int *no, int n, void *pbuf, int count);
int WINAPI MEsendBytes(int no, void *pbuf, int count);
int WINAPI GSVreceived(int no);
int WINAPI GSVread(int no, double *ad);
int WINAPI GSVreadMultiple(int no, double *ad, int count, int *valsread);
int WINAPI GSVreadStatus(int no, double *ad, unsigned char *ps);
int WINAPI GSVreadStatusMultiple(int no, double *ad, unsigned char *ps, int count, int *valsread);
int WINAPI GSVcopyMemory(int no, int dc, int addr, void *buffer);
int WINAPI GSVcheckMemory(int no, int dc, int addr, unsigned char *buffer);
int WINAPI GSVcopyLinear(int no, double *pd, int nd, int *pr);
int WINAPI MEasynchronousSendBytes(int no, void *pbuf, int count, void *handle);
int WINAPI MEsynchronizeSendBytes(int no);
int WINAPI GSVgetOptionsCode(int no);
int WINAPI GSVgetOptionsExtension3(int no);
int WINAPI GSVgetOptionsLinear(int no);
int WINAPI GSVgetOptionsExtension21(int no);
int WINAPI GSVgetOptionsSleepMode(int no);
int WINAPI GSVgetOptionsCommandTest(int no);
int WINAPI MEwriteRanges(int no, int channel, int inx, long ia);
int WINAPI GSVisBipol(int no);
double WINAPI GSVgetFreq(int no);
int WINAPI GSVgetGain(int no);
int WINAPI GSVgetChannel(int no);
int WINAPI GSVsetModeSI(int no, int msi);
int WINAPI GSVgetModeSI(int no);
int WINAPI GSVsetModeText(int no, int mt);
int WINAPI GSVgetModeText(int no);
int WINAPI GSVsetModeMax(int no, int mx);
int WINAPI GSVgetModeMax(int no);
int WINAPI GSVsetModeLog(int no, int lg);
int WINAPI GSVgetModeLog(int no);
int WINAPI GSVsetModeWindow(int no, int win);
int WINAPI GSVgetModeWindow(int no);
int WINAPI GSVsetModeAverage(int no, int avg);
int WINAPI GSVgetModeAverage(int no);
int WINAPI GSVsetModeLinear(int no, int lin);
int WINAPI GSVgetModeLinear(int no);
int WINAPI MEsetModeLock(int no, int slock, char *id);
int WINAPI GSVgetModeLock(int no);
int WINAPI GSVhasLCD(int no);
int WINAPI GSVhasADC(int no);
int WINAPI GSVhasUII(int no);
int WINAPI GSVisSI(int no);
int WINAPI GSVisWL(int no);
int WINAPI GSVhasAF(int no);
int WINAPI GSVsetBridgeType(int no, int bt);
int WINAPI GSVgetBridgeType(int no);
int WINAPI GSVsetBridgeInternal(int no, int bi);
int WINAPI GSVgetBridgeInternal(int no);
int WINAPI GSVresetStatus(int no);
long WINAPI GSVgetScale(int no);
long WINAPI GSVgetZero(int no);
long WINAPI GSVgetControl(int no);
long WINAPI GSVgetOffset(int no);
int WINAPI GSVwriteScale(int no, long scale);
int WINAPI GSVwriteZero(int no, long zero);
int WINAPI GSVwriteControl(int no, long control);
int WINAPI GSVwriteOffset(int no, long offset);
int WINAPI GSVgetAll(int no, int pos);
int WINAPI GSVsaveAll(int no, int pos);
int WINAPI GSVsetCal(int no);
int WINAPI GSVsetZero(int no);
int WINAPI GSVsetScale(int no);
int WINAPI GSVsetOffset(int no);
int WINAPI GSVDispSetUnit(int no, int dispunit);
int WINAPI GSVDispSetNorm(int no, double norm);
int WINAPI GSVDispSetDPoint(int no, int dpoint);
int WINAPI GSVsetFreq(int no, double freq);
int WINAPI GSVsetGain(int no, int gain);
int WINAPI GSVsetBipolar(int no);